Bug 312927 - kontact summary sorts events by some unknown order; should sort by time
Summary: kontact summary sorts events by some unknown order; should sort by time
Status: RESOLVED FIXED
Alias: None
Product: kontact
Classification: Applications
Component: summary (other bugs)
Version First Reported In: 5.4.3
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
: 325020 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-01-09 09:40 UTC by Mathias Homann
Modified: 2017-09-22 21:52 UTC (History)
7 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: master
Sentry Crash Report:


Attachments
Digital Clock Plasmoid (31.57 KB, image/jpeg)
2014-09-04 20:45 UTC, rubenvanos
Details
Kontakt (88.95 KB, image/jpeg)
2014-09-04 20:46 UTC, rubenvanos
Details
screenshot of the bug (with inversion of the task order on the most recent day as an example of the problem) (38.27 KB, image/jpeg)
2014-11-06 09:53 UTC, stakanov
Details
Still present in 5.0.2 (18.73 KB, image/png)
2015-10-29 08:28 UTC, Tom Mittelstädt
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mathias Homann 2013-01-09 09:40:10 UTC
I have the contact summary show upcoming events, and it seems to sort them by calendar...
I think the upcoming events piece should sort all events just by time.

Reproducible: Always

Steps to Reproduce:
1. use more than one calendar
2. make sure they all have more than one event for the same day
3. observe the weird sorting order in kontact summary
Actual Results:  
events should simply be sorted by time

Expected Results:  
events seem to be sorted by calendar first, and *then* by time
Comment 1 Laurent Montel 2013-10-07 11:27:22 UTC
I confirm it.
Comment 2 rubenvanos 2014-09-04 20:45:41 UTC
Created attachment 88568 [details]
Digital Clock Plasmoid
Comment 3 rubenvanos 2014-09-04 20:46:02 UTC
Created attachment 88569 [details]
Kontakt
Comment 4 rubenvanos 2014-09-04 20:46:28 UTC
This bug happens to me as well, both on KDE 4.8.5 and KDE 4.12.5. It doesn't only involve Kontact, though, the Digital Clock Plasmoid features the same incorrect behaviour in its calendar, rendering it practically useless. Only KOrganizer seems to do it right.

See attached (censored) screenshots of a single calendar being sorted incorrectly in the Digital Clock Plasmoid and Kontact.
Comment 5 rubenvanos 2014-09-04 20:48:35 UTC
(In reply to rubenvanos from comment #4)
> This bug happens to me as well, both on KDE 4.8.5 and KDE 4.12.5. It doesn't
> only involve Kontact, though, the Digital Clock Plasmoid features the same
> incorrect behaviour in its calendar, rendering it practically useless. Only
> KOrganizer seems to do it right.
> 
> See attached (censored) screenshots of a single calendar being sorted
> incorrectly in the Digital Clock Plasmoid and Kontact.

Edit: I only just realized Kontakt seems to sort correctly. My apologies. It seemed incorrect when I looked over it several times to make sure. The Digital Clock Plasmoid does sort incorrectly, but that is probably another bug.
Comment 6 stakanov 2014-11-06 09:53:15 UTC
Created attachment 89473 [details]
screenshot of the bug (with inversion of the task order on the most recent day as an example of the problem)

The problem is the reversed order of items PER day. 
The order of subsequent day tasks is fine.
Comment 7 stakanov 2014-11-06 09:53:35 UTC
I confirm this bug for Kontakt 4.14.2 from standard repos openSUSE 13.2
In the attachment you can see what was also the case for the others:
the events of the respective day are ordered from the most last to the first while the order should be the first to come then followed in the timeline by the others. The events of the days coming up after are correctly lined up from the first coming to the last. Logic wants that the event coming right next is the one to have the attention and not the last event of the day. 
So the problem seems to the order of the events of the current day in the summary. This order is actually inverted. 
The order of subsequent days is fine. 
See screen-shot.
Comment 8 Tom Mittelstädt 2015-10-29 08:28:23 UTC
Created attachment 95200 [details]
Still present in 5.0.2

the bug is still present in 5.0.2
should be confirmed
Comment 9 Carioca 2016-01-02 11:20:42 UTC
Here is the same problem.
Comment 10 Amaury Carrade 2016-01-03 15:45:16 UTC
*** Bug 325020 has been marked as a duplicate of this bug. ***
Comment 11 Denis Kurz 2017-06-23 20:41:17 UTC
This bug has never been confirmed for a KDE PIM version that is based on KDE Frameworks, except possibly a Technology Preview version 5.0.x. Those Framework-based versions differ significantly from the old 4.x series. Therefore, I plan to close it in around two or three months. In the meantime, it is set to WAITINGFORINFO to give reporters the opportunity to check if it is still valid. As soon as someone confirms it for a recent version (at least 5.1, ideally even more recent), I'll gladly reopen it.

Please understand that we lack the manpower to triage bugs reported for versions almost two years beyond their end of life.
Comment 12 Tom Mittelstädt 2017-06-24 13:20:29 UTC
Still present in kontact 5.4.3.

Sort order seems to be something like:

Today       16:00
Today       09:00
Tomorrow    15:00
Tomorrow    10:00
Comment 13 Laurent Montel 2017-06-24 14:00:36 UTC
IT's sorted from A to Z
Ok I need to look at it.
Comment 14 Carioca 2017-06-24 19:28:51 UTC
As Tom Mittelstädt wrote.
Comment 15 Allen Winter 2017-09-22 21:52:30 UTC
Git commit fc3c1d073c9c2881fb8dbe0423da695b39dc5d3c by Allen Winter.
Committed on 22/09/2017 at 21:52.
Pushed by winterz into branch 'master'.

src/kontactplugin/korganizer/summaryeventinfo.cpp - fix sorting

Differential Revision: https://phabricator.kde.org/D7931
FIXED-IN: master

M  +4    -4    src/kontactplugin/korganizer/summaryeventinfo.cpp

https://commits.kde.org/korganizer/fc3c1d073c9c2881fb8dbe0423da695b39dc5d3c