src/kontactplugin/korganizer/summaryeventinfo.cpp - fix sorting

Differential Revision: https://phabricator.kde.org/D7931
BUG: 312927
FIXED-IN: master